force-app/main/default/objects/Game_Components__c/fields/Face_Type__c.field-meta.xml
<CustomField>
    <fullName>Face_Type__c</fullName>
    <inlineHelpText>Only 6-sided dice can have printed sides</inlineHelpText>
    <label>Face Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pip</fullName>
                <default>true</default>
                <label>Pip</label>
            </value>
            <value>
                <fullName>Printed</fullName>
            </value>
            <value>
                <fullName>Custom Engraved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>