force-app/main/default/objects/Game_Components__c/fields/Faux_Leather_Color__c.field-meta.xml
<CustomField>
    <fullName>Faux_Leather_Color__c</fullName>
    <inlineHelpText>Color of the project&apos;s faux leather cover.</inlineHelpText>
    <label>Faux Leather Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Burgundy</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>