force-app/main/default/objects/Game_Components__c/fields/Finish_Style__c.field-meta.xml
<CustomField>
    <fullName>Finish_Style__c</fullName>
    <label>Finish Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
            <value>
                <fullName>Anti-Scratch Matte</fullName>
            </value>
            <value>
                <fullName>Soft-Touch Matte Lamination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>