force-app/main/default/objects/Game_Components__c/fields/Foil_Stamp_Color__c.field-meta.xml
<CustomField>
    <fullName>Foil_Stamp_Color__c</fullName>
    <inlineHelpText>Color of the project&apos;s foil stamp.</inlineHelpText>
    <label>Packaging Foil Stamp Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Hot Pink</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>Rose Gold</fullName>
            </value>
            <value>
                <fullName>Teal</fullName>
            </value>
            <value>
                <fullName>Lime Green</fullName>
            </value>
            <value>
                <fullName>Stained Glass Gold</fullName>
            </value>
            <value>
                <fullName>Stained Glass Silver</fullName>
            </value>
            <value>
                <fullName>Stained Glass Green</fullName>
            </value>
            <value>
                <fullName>Stained Glass Red</fullName>
            </value>
            <value>
                <fullName>Stained Glass Blue</fullName>
            </value>
            <value>
                <fullName>Stained Glass Pink</fullName>
            </value>
            <value>
                <fullName>Holographic Gold</fullName>
            </value>
            <value>
                <fullName>Holographic Silver</fullName>
            </value>
            <value>
                <fullName>Glitter Gold</fullName>
            </value>
            <value>
                <fullName>Glitter Silver</fullName>
            </value>
            <value>
                <fullName>Glitter Lime</fullName>
            </value>
            <value>
                <fullName>Glitter Pink</fullName>
            </value>
            <value>
                <fullName>Pixel Gold</fullName>
            </value>
            <value>
                <fullName>Pixel Silver</fullName>
            </value>
            <value>
                <fullName>Chunky Glitter Gold</fullName>
            </value>
            <value>
                <fullName>Chunky Glitter Silver</fullName>
            </value>
            <value>
                <fullName>Industrial Silver</fullName>
            </value>
            <value>
                <fullName>Rainbow Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>