force-app/main/default/objects/Game_Components__c/fields/Game_Board_Backing__c.field-meta.xml
<CustomField>
    <fullName>Game_Board_Backing__c</fullName>
    <label>Game Board Backing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black Game Board Backing</fullName>
                <default>true</default>
                <label>Black Game Board Backing</label>
            </value>
            <value>
                <fullName>CMYK Printing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>