force-app/main/default/objects/Game_Components__c/fields/Game_Component_Detail__c.field-meta.xml
<CustomField>
    <fullName>Game_Component_Detail__c</fullName>
    <formula>IF(RecordType.Name = &quot;Game Piece&quot;,RecordType.Name &amp; &quot; &quot; &amp; &quot;-&quot; &amp; &quot; &quot; &amp; TEXT(Type_of_Piece__c),RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Game Component Type</label>
    <type>Text</type>
</CustomField>