force-app/main/default/objects/Game_Components__c/fields/Game_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Game_Component_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Game Component Type</label>
    <type>Text</type>
</CustomField>