force-app/main/default/objects/Game_Components__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <inlineHelpText>Height in inches</inlineHelpText>
    <label>Height</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>