force-app/main/default/objects/Game_Components__c/fields/Innersleeve_Coating__c.field-meta.xml
<CustomField>
    <fullName>Innersleeve_Coating__c</fullName>
    <label>Innersleeve Coating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
            <value>
                <fullName>Uncoated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>