force-app/main/default/objects/Game_Components__c/fields/Innersleeve_Lining__c.field-meta.xml
<CustomField>
    <fullName>Innersleeve_Lining__c</fullName>
    <label>Innersleeve Lining</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poly</fullName>
            </value>
            <value>
                <fullName>Laminated</fullName>
            </value>
            <value>
                <fullName>Unlined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>