force-app/main/default/objects/Game_Components__c/fields/Innersleeve_Printing__c.field-meta.xml
<CustomField>
    <fullName>Innersleeve_Printing__c</fullName>
    <label>Innersleeve Printing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Printed</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>