force-app/main/default/objects/Game_Components__c/fields/Innersleeve_Window__c.field-meta.xml
<CustomField>
    <fullName>Innersleeve_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Innersleeve Window</label>
    <type>Checkbox</type>
</CustomField>