force-app/main/default/objects/Game_Components__c/fields/Inside_Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Inside_Page_Count__c</fullName>
    <inlineHelpText>Number of inside pages not including cover or endsheets.</inlineHelpText>
    <label>Inside Page Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>