force-app/main/default/objects/Game_Components__c/fields/Inside_Paper_Coating__c.field-meta.xml
<CustomField>
    <fullName>Inside_Paper_Coating__c</fullName>
    <label>Inside Paper Coating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
            <value>
                <fullName>Uncoated</fullName>
            </value>
            <value>
                <fullName>1 Side Gloss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>