force-app/main/default/objects/Game_Components__c/fields/Is_Used_To_Calculate_ROW__c.field-meta.xml
<CustomField>
    <fullName>Is_Used_To_Calculate_ROW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Used To Calculate ROW</label>
    <type>Checkbox</type>
</CustomField>