force-app/main/default/objects/Game_Components__c/fields/Jacket_Finish__c.field-meta.xml
<CustomField>
    <fullName>Jacket_Finish__c</fullName>
    <label>Jacket Finish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss Varnish</fullName>
            </value>
            <value>
                <fullName>Gloss Lamination</fullName>
            </value>
            <value>
                <fullName>Matte Varnish</fullName>
            </value>
            <value>
                <fullName>Matte Lamination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>