force-app/main/default/objects/Game_Components__c/fields/Jacket_Size__c.field-meta.xml
<CustomField>
    <fullName>Jacket_Size__c</fullName>
    <label>Jacket Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Gatefold</fullName>
            </value>
            <value>
                <fullName>Trifold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>