force-app/main/default/objects/Game_Components__c/fields/Jacket_Type__c.field-meta.xml
<CustomField>
    <fullName>Jacket_Type__c</fullName>
    <label>Jacket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Tip-On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>