force-app/main/default/objects/Game_Components__c/fields/Left_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Left_Pocket__c</fullName>
    <label>Left Pocket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Sealed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>