force-app/main/default/objects/Game_Components__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.5mm Board</fullName>
            </value>
            <value>
                <fullName>2mm Board</fullName>
            </value>
            <value>
                <fullName>2.5mm Board</fullName>
            </value>
            <value>
                <fullName>3mm Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>