force-app/main/default/objects/Game_Components__c/fields/Material_Dice__c.field-meta.xml
<CustomField>
    <fullName>Material_Dice__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Opaque Resin</fullName>
            </value>
            <value>
                <fullName>Transparent Resin</fullName>
            </value>
            <value>
                <fullName>Transparent Glitter Resin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>