force-app/main/default/objects/Game_Components__c/fields/Number_of_Card_Backs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Card_Backs__c</fullName>
    <inlineHelpText>Number of different card back artworks.</inlineHelpText>
    <label>Number of Card Backs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>