force-app/main/default/objects/Game_Components__c/fields/Number_of_Folds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Folds__c</fullName>
    <label>Number of Folds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>