force-app/main/default/objects/Game_Components__c/fields/Number_of_Pages_Pad__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pages_Pad__c</fullName>
    <inlineHelpText>Count in Sheets, instead of Pages</inlineHelpText>
    <label>Number of Pages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>