force-app/main/default/objects/Game_Components__c/fields/Number_of_Pieces_10__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pieces_10__c</fullName>
    <inlineHelpText>Number of game pieces per color</inlineHelpText>
    <label>Number of Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>