force-app/main/default/objects/Game_Components__c/fields/Number_of_Pieces_11__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pieces_11__c</fullName>
    <label>Number of Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>