force-app/main/default/objects/Game_Components__c/fields/Number_of_Sections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sections__c</fullName>
    <label>Number of Sections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>