force-app/main/default/objects/Game_Components__c/fields/Number_of_Spot_Colors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Spot_Colors__c</fullName>
    <inlineHelpText>Number of spot colors used</inlineHelpText>
    <label>Number of Spot Colors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+1 Spot Color</fullName>
            </value>
            <value>
                <fullName>+2 Spot Colors</fullName>
            </value>
            <value>
                <fullName>+3 Spot Colors</fullName>
            </value>
            <value>
                <fullName>+4 Spot Colors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>