force-app/main/default/objects/Game_Components__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Game Components</relationshipLabel>
    <relationshipName>Game_Component</relationshipName>
    <type>Lookup</type>
</CustomField>