force-app/main/default/objects/Game_Components__c/fields/Order_Quantity_3__c.field-meta.xml
<CustomField>
    <fullName>Order_Quantity_3__c</fullName>
    <formula>Custom_Game_Quote__r.Order_Quantity_3__c</formula>
    <inlineHelpText>Pulled from Opportunity</inlineHelpText>
    <label>Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>