force-app/main/default/objects/Game_Components__c/fields/Packaging_Finish_Type__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Finish_Type__c</fullName>
    <label>Packaging Finish Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Varnish</fullName>
            </value>
            <value>
                <fullName>Lamination</fullName>
            </value>
            <value>
                <fullName>Anti-Scratch Lamination</fullName>
            </value>
            <value>
                <fullName>Soft-Touch Matte Lamination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>