force-app/main/default/objects/Game_Components__c/fields/Packaging_Material__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Material__c</fullName>
    <label>Packaging Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12pt Coated 1-Side Cardstock</fullName>
            </value>
            <value>
                <fullName>14pt Coated 1-Side Cardstock</fullName>
            </value>
            <value>
                <fullName>15pt Foil Stock</fullName>
            </value>
            <value>
                <fullName>1.5mm Board</fullName>
            </value>
            <value>
                <fullName>2mm Board</fullName>
            </value>
            <value>
                <fullName>2.5mm Board</fullName>
            </value>
            <value>
                <fullName>3mm Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>