force-app/main/default/objects/Game_Components__c/fields/Packaging_Metallic_Ink_Color__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Metallic_Ink_Color__c</fullName>
    <inlineHelpText>The color of metallic ink used on the card box</inlineHelpText>
    <label>Packaging Metallic Ink Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold and Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>