force-app/main/default/objects/Game_Components__c/fields/Packaging_Printing_Color__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Printing_Color__c</fullName>
    <label>Packaging Printing Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Color CMYK</fullName>
            </value>
            <value>
                <fullName>Black &amp; White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>