force-app/main/default/objects/Game_Components__c/fields/Panel_Style__c.field-meta.xml
<CustomField>
    <fullName>Panel_Style__c</fullName>
    <label>Panel Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
            <value>
                <fullName>Quad</fullName>
            </value>
            <value>
                <fullName>Triple Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>