force-app/main/default/objects/Game_Components__c/fields/Paper_Color__c.field-meta.xml
<CustomField>
    <fullName>Paper_Color__c</fullName>
    <label>Paper Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Off-White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>