force-app/main/default/objects/Game_Components__c/fields/Paper_Weight__c.field-meta.xml
<CustomField>
    <fullName>Paper_Weight__c</fullName>
    <label>Paper Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>55lb</fullName>
            </value>
            <value>
                <fullName>70lb</fullName>
            </value>
            <value>
                <fullName>85lb</fullName>
            </value>
            <value>
                <fullName>105lb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>